--- a/Machine_model/housing_model.ipynb
+++ b/Machine_model/housing_model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,8 @@
    "outputs": [],
    "source": [
     "# Load in Data\n",
-    "file_path = Path(\"/Data/Source_Data/Metro_mlp_uc_sfrcondo_sm_month_csv\") # Replace this with summary data from SQL Database and drive the connection to \n",
+    "file_path = Path(\"/Data/Source_Data/Metro_mlp_uc_sfrcondo_sm_month_csv\") \n",
+    "# Replace this with summary data from SQL Database and drive the connection to \n",
     "housing_data_df = pd.read_csv(file_path)\n",
     "\n",
     "# ? Drop any Null Values or Rows or Replace ? Cleaning should be done with SQL or do we want to manipulate here ?\n"
