--- a/Machine_model/housing_model.ipynb
+++ b/Machine_model/housing_model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,10 +51,10 @@
    "outputs": [],
    "source": [
     "# Load in Data\n",
-    "file_path = Path(\"/Data/Source_Data/Metro_mlp_uc_sfrcondo_sm_month_csv\") \n",
+    "file_path = Path(\"..\\Data\\Model_Data\\MSA_Labor_Force_Unemployment_Cleaned.csv\") \n",
     "# Replace this with summary data from SQL Database and drive the connection to \n",
     "housing_data_df = pd.read_csv(file_path)\n",
-    "\n",
+    "housing_data_df.head(10)\n",
     "# ? Drop any Null Values or Rows or Replace ? Cleaning should be done with SQL or do we want to manipulate here ?\n"
    ]
   },
@@ -72,8 +72,25 @@
    "outputs": [],
    "source": [
     "# Create our features\n",
-    "X = housing_data_df.drop(columns=\"<Select all but Target>\") # TBD based on factors to pull in\n",
-    "y = housing_data_df[\"<Insert Target Column>\"]"
+    "y = housing_data_df[\"Unemployment Rate\"]\n",
+    "X = housing_data_df.drop(columns=\"Unemployment Rate\") # TBD based on factors to pull in\n",
+    "X.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Need to make target value from continuous to integer\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn import utils\n",
+    "\n",
+    "#convert y values to categorical values\n",
+    "lab = preprocessing.LabelEncoder()\n",
+    "y_transformed = lab.fit_transform(y)\n",
+    "print(y_transformed)"
    ]
   },
   {
@@ -84,7 +101,7 @@
    "source": [
     "# Import sklearn model\n",
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,y,random_state=1,stratify=y)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y_transformed,random_state=42)\n",
     "# Create the scaler instance\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler().fit(X_train)\n",
@@ -117,7 +134,7 @@
     "# Resample the training data with the RandomOversampler\n",
     "# Implement Random Oversampler\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
-    "ros = RandomOverSampler(random_state=1)\n",
+    "ros = RandomOverSampler(random_state=42)\n",
     "X_resampled, y_resampled = ros.fit_resample(X_train_scaled, y_train)\n",
     "Counter(y_resampled)"
    ]
@@ -130,7 +147,7 @@
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "classifier = LogisticRegression(solver='lbfgs', max_iter=200, random_state=1)\n",
+    "classifier = LogisticRegression(solver='lbfgs', max_iter=200, random_state=42)\n",
     "# Fit the model\n",
     "classifier.fit(X_resampled,y_resampled)"
    ]
@@ -185,6 +202,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -192,7 +214,7 @@
    "source": [
     "# Resample the training data with SMOTE\n",
     "from imblearn.over_sampling import SMOTE\n",
-    "X_resampled, y_resampled = SMOTE(random_state=1, sampling_strategy='auto').fit_resample(X_train_scaled, y_train)\n",
+    "X_resampled, y_resampled = SMOTE(random_state=42, sampling_strategy='auto').fit_resample(X_train_scaled, y_train)\n",
     "Counter(y_resampled)"
    ]
   },
@@ -249,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('PythonData')",
+   "display_name": "Python 3.7.13 ('mlenv')",
    "language": "python",
    "name": "python3"
   },
@@ -268,7 +290,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a58ee428ef749bda89f6792b351ce0eebd07247df5e241e6c06aec66352557cd"
+    "hash": "b57c4a5765365eaa53b190cd8ab8cc2d5608e260ab9fd7eb3ec9d34dac90b4ac"
    }
   }
  },
