Saved initial photos with model

--- a/Machine_model/housing_model.ipynb
+++ b/Machine_model/housing_model.ipynb
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1389,6 +1389,9 @@
    ],
    "source": [
     "# Plot with above\n",
+    "from matplotlib.pyplot import savefig\n",
+    "\n",
+    "\n",
     "plt.style.use('default')\n",
     "plt.style.use('ggplot')\n",
     "\n",
@@ -1401,7 +1404,8 @@
     "ax.legend(facecolor='white', fontsize=11)\n",
     "ax.set_title('$R^2= %.2f$' % r2sv, fontsize=18)\n",
     "\n",
-    "fig.tight_layout()"
+    "fig.tight_layout()\n",
+    "savefig('2DLinear.png')"
    ]
   },
   {
@@ -1413,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1440,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1485,8 @@
     "\n",
     "fig.suptitle('$R^2 = %.2f$' % r2threed, fontsize=20)\n",
     "\n",
-    "fig.tight_layout()"
+    "fig.tight_layout()\n",
+    "savefig('3DLinear.png')"
    ]
   }
  ],
