Minor Commenting in Model

--- a/Machine_model/housing_model.ipynb
+++ b/Machine_model/housing_model.ipynb
@@ -1429,8 +1429,8 @@
     "y = rent[:,1]\n",
     "z = homePrice\n",
     "\n",
-    "x_pred = np.linspace(0, 50000, 1000)   # range of porosity values\n",
-    "y_pred = np.linspace(1000, 2000, 100)  # range of brittleness values\n",
+    "x_pred = np.linspace(0, 50000, 1000)   # Range of rent values\n",
+    "y_pred = np.linspace(1000, 2000, 100)  # Range of home values\n",
     "xx_pred, yy_pred = np.meshgrid(x_pred, y_pred)\n",
     "model_viz = np.array([xx_pred.flatten(), yy_pred.flatten()]).T\n",
     "\n",
