--- a/Machine_model/housing_model.ipynb
+++ b/Machine_model/housing_model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "[275 rows x 12 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,40 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "region_id                 int64\n",
-       "region_desc              object\n",
-       "week                     object\n",
-       "sales_inventory           int64\n",
-       "civilian_labor_force    float64\n",
-       "employment              float64\n",
-       "unemployment            float64\n",
-       "unemployment_rate       float64\n",
-       "med_house_price           int64\n",
-       "rent_index              float64\n",
-       "sales_count               int64\n",
-       "price_cut               float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check data types\n",
-    "housing_data_df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +565,7 @@
        "[267 rows x 12 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +772,7 @@
        "9                4.3     1618.47         8519     5000.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1199,10 +1166,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>region_id</th>\n",
        "      <th>sales_inventory</th>\n",
        "      <th>unemployment</th>\n",
-       "      <th>unemployment_rate</th>\n",
        "      <th>rent_index</th>\n",
        "      <th>price_cut</th>\n",
        "    </tr>\n",
@@ -1210,91 +1175,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>394463</td>\n",
        "      <td>38581</td>\n",
        "      <td>209884.0</td>\n",
-       "      <td>4.2</td>\n",
        "      <td>1610.46</td>\n",
        "      <td>9100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>394463</td>\n",
        "      <td>42253</td>\n",
        "      <td>204092.0</td>\n",
-       "      <td>4.1</td>\n",
        "      <td>1622.52</td>\n",
        "      <td>10000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>394463</td>\n",
        "      <td>45757</td>\n",
        "      <td>200450.0</td>\n",
-       "      <td>4.0</td>\n",
        "      <td>1634.70</td>\n",
        "      <td>10000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>394463</td>\n",
        "      <td>47492</td>\n",
        "      <td>198869.0</td>\n",
-       "      <td>4.0</td>\n",
        "      <td>1645.26</td>\n",
        "      <td>9652.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>394463</td>\n",
        "      <td>48984</td>\n",
        "      <td>198473.0</td>\n",
-       "      <td>4.0</td>\n",
        "      <td>1651.54</td>\n",
        "      <td>9000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>394463</td>\n",
        "      <td>49782</td>\n",
        "      <td>199432.0</td>\n",
-       "      <td>4.0</td>\n",
        "      <td>1650.94</td>\n",
        "      <td>7000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>394463</td>\n",
        "      <td>49630</td>\n",
        "      <td>201585.0</td>\n",
-       "      <td>4.1</td>\n",
        "      <td>1643.64</td>\n",
        "      <td>7500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>394463</td>\n",
        "      <td>48916</td>\n",
        "      <td>204618.0</td>\n",
-       "      <td>4.1</td>\n",
        "      <td>1632.04</td>\n",
        "      <td>6000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>394463</td>\n",
        "      <td>46495</td>\n",
        "      <td>208640.0</td>\n",
-       "      <td>4.2</td>\n",
        "      <td>1623.91</td>\n",
        "      <td>5400.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>394463</td>\n",
        "      <td>42304</td>\n",
        "      <td>212919.0</td>\n",
-       "      <td>4.3</td>\n",
        "      <td>1618.47</td>\n",
        "      <td>5000.0</td>\n",
        "    </tr>\n",
@@ -1303,32 +1248,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   region_id  sales_inventory  unemployment  unemployment_rate  rent_index  \\\n",
-       "0     394463            38581      209884.0                4.2     1610.46   \n",
-       "1     394463            42253      204092.0                4.1     1622.52   \n",
-       "2     394463            45757      200450.0                4.0     1634.70   \n",
-       "3     394463            47492      198869.0                4.0     1645.26   \n",
-       "4     394463            48984      198473.0                4.0     1651.54   \n",
-       "5     394463            49782      199432.0                4.0     1650.94   \n",
-       "6     394463            49630      201585.0                4.1     1643.64   \n",
-       "7     394463            48916      204618.0                4.1     1632.04   \n",
-       "8     394463            46495      208640.0                4.2     1623.91   \n",
-       "9     394463            42304      212919.0                4.3     1618.47   \n",
-       "\n",
-       "   price_cut  \n",
-       "0     9100.0  \n",
-       "1    10000.0  \n",
-       "2    10000.0  \n",
-       "3     9652.5  \n",
-       "4     9000.0  \n",
-       "5     7000.0  \n",
-       "6     7500.0  \n",
-       "7     6000.0  \n",
-       "8     5400.0  \n",
-       "9     5000.0  "
+       "   sales_inventory  unemployment  rent_index  price_cut\n",
+       "0            38581      209884.0     1610.46     9100.0\n",
+       "1            42253      204092.0     1622.52    10000.0\n",
+       "2            45757      200450.0     1634.70    10000.0\n",
+       "3            47492      198869.0     1645.26     9652.5\n",
+       "4            48984      198473.0     1651.54     9000.0\n",
+       "5            49782      199432.0     1650.94     7000.0\n",
+       "6            49630      201585.0     1643.64     7500.0\n",
+       "7            48916      204618.0     1632.04     6000.0\n",
+       "8            46495      208640.0     1623.91     5400.0\n",
+       "9            42304      212919.0     1618.47     5000.0"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,13 +1271,13 @@
     "# civilian_labor_force, employment, and sales count\n",
     "# Create our features\n",
     "y = housing_data_cleaned[\"med_house_price\"]\n",
-    "X = housing_data_cleaned.drop(columns=[\"med_house_price\",\"region_desc\",\"week\",\"civilian_labor_force\",\"employment\",\"sales_count\"]) # TBD based on factors to pull in\n",
+    "X = housing_data_cleaned.drop(columns=[\"med_house_price\",\"region_desc\",\"week\",\"region_id\",\"civilian_labor_force\",\"employment\",\"unemployment_rate\",\"sales_count\"]) # TBD based on factors to pull in\n",
     "X.head(10) #Confirm Out has med_house_price dropped? =Yes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,16 +1291,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7470926376205864"
+       "0.7210976224703833"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1434,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1577,30 +1510,29 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:        med_house_price   R-squared:                       0.779\n",
-      "Model:                            OLS   Adj. R-squared:                  0.773\n",
-      "Method:                 Least Squares   F-statistic:                     152.4\n",
-      "Date:                Sun, 20 Nov 2022   Prob (F-statistic):           3.92e-82\n",
-      "Time:                        11:55:08   Log-Likelihood:                -3124.5\n",
-      "No. Observations:                 267   AIC:                             6263.\n",
-      "Df Residuals:                     260   BIC:                             6288.\n",
-      "Df Model:                           6                                         \n",
+      "Dep. Variable:        med_house_price   R-squared:                       0.775\n",
+      "Model:                            OLS   Adj. R-squared:                  0.771\n",
+      "Method:                 Least Squares   F-statistic:                     180.0\n",
+      "Date:                Sun, 20 Nov 2022   Prob (F-statistic):           2.03e-82\n",
+      "Time:                        17:53:11   Log-Likelihood:                -3126.6\n",
+      "No. Observations:                 267   AIC:                             6265.\n",
+      "Df Residuals:                     261   BIC:                             6287.\n",
+      "Df Model:                           5                                         \n",
       "Covariance Type:            nonrobust                                         \n",
-      "=====================================================================================\n",
-      "                        coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "-------------------------------------------------------------------------------------\n",
-      "const              2.105e+07   3.82e+06      5.515      0.000    1.35e+07    2.86e+07\n",
-      "region_id           -53.0779      9.664     -5.492      0.000     -72.107     -34.049\n",
-      "sales_inventory      -1.3922      0.247     -5.638      0.000      -1.878      -0.906\n",
-      "unemployment         -0.1362      0.040     -3.433      0.001      -0.214      -0.058\n",
-      "unemployment_rate  2783.2379   1386.173      2.008      0.046      53.684    5512.792\n",
-      "rent_index          130.4738     13.930      9.366      0.000     103.044     157.904\n",
-      "price_cut             6.3197      0.534     11.839      0.000       5.269       7.371\n",
+      "===================================================================================\n",
+      "                      coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------\n",
+      "const            2.121e+07   3.84e+06      5.525      0.000    1.36e+07    2.88e+07\n",
+      "region_id         -53.4215      9.718     -5.497      0.000     -72.558     -34.285\n",
+      "sales_inventory    -1.6810      0.202     -8.328      0.000      -2.079      -1.284\n",
+      "unemployment       -0.0687      0.021     -3.247      0.001      -0.110      -0.027\n",
+      "rent_index        122.6958     13.458      9.117      0.000      96.196     149.196\n",
+      "price_cut           6.3436      0.537     11.818      0.000       5.287       7.401\n",
       "==============================================================================\n",
-      "Omnibus:                       12.296   Durbin-Watson:                   0.242\n",
-      "Prob(Omnibus):                  0.002   Jarque-Bera (JB):               24.999\n",
-      "Skew:                           0.163   Prob(JB):                     3.73e-06\n",
-      "Kurtosis:                       4.463   Cond. No.                     8.77e+08\n",
+      "Omnibus:                       12.733   Durbin-Watson:                   0.255\n",
+      "Prob(Omnibus):                  0.002   Jarque-Bera (JB):               27.156\n",
+      "Skew:                           0.149   Prob(JB):                     1.27e-06\n",
+      "Kurtosis:                       4.534   Cond. No.                     8.77e+08\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
@@ -1620,7 +1552,7 @@
     }
    ],
    "source": [
-    "X = housing_data_cleaned.drop(columns=[\"med_house_price\",\"region_desc\",\"week\",\"civilian_labor_force\",\"employment\",\"sales_count\"])\n",
+    "X = housing_data_cleaned.drop(columns=[\"med_house_price\",\"region_desc\",\"week\",\"civilian_labor_force\",\"employment\",\"unemployment_rate\",\"sales_count\"])\n",
     "X = sm.add_constant(X) # adding a constant\n",
     "\n",
     "olsmod = sm.OLS(housing_data_cleaned['med_house_price'], X).fit()\n",
