--- a/Machine_model/housing_model.ipynb
+++ b/Machine_model/housing_model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "[275 rows x 12 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
        "[267 rows x 12 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "9                4.3     1618.47         8519     5000.0  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
        "         333617: 4})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
        "0.7896141056710256"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1261,7 @@
        "9            42304      212919.0     1618.47     5000.0"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
        "0.7210976224703833"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1510,34 +1510,33 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:        med_house_price   R-squared:                       0.775\n",
-      "Model:                            OLS   Adj. R-squared:                  0.771\n",
-      "Method:                 Least Squares   F-statistic:                     180.0\n",
-      "Date:                Sun, 20 Nov 2022   Prob (F-statistic):           2.03e-82\n",
-      "Time:                        17:53:11   Log-Likelihood:                -3126.6\n",
-      "No. Observations:                 267   AIC:                             6265.\n",
-      "Df Residuals:                     261   BIC:                             6287.\n",
-      "Df Model:                           5                                         \n",
+      "Dep. Variable:        med_house_price   R-squared:                       0.749\n",
+      "Model:                            OLS   Adj. R-squared:                  0.745\n",
+      "Method:                 Least Squares   F-statistic:                     195.6\n",
+      "Date:                Tue, 22 Nov 2022   Prob (F-statistic):           2.10e-77\n",
+      "Time:                        17:30:49   Log-Likelihood:                -3141.2\n",
+      "No. Observations:                 267   AIC:                             6292.\n",
+      "Df Residuals:                     262   BIC:                             6310.\n",
+      "Df Model:                           4                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "===================================================================================\n",
       "                      coef    std err          t      P>|t|      [0.025      0.975]\n",
       "-----------------------------------------------------------------------------------\n",
-      "const            2.121e+07   3.84e+06      5.525      0.000    1.36e+07    2.88e+07\n",
-      "region_id         -53.4215      9.718     -5.497      0.000     -72.558     -34.285\n",
-      "sales_inventory    -1.6810      0.202     -8.328      0.000      -2.079      -1.284\n",
-      "unemployment       -0.0687      0.021     -3.247      0.001      -0.110      -0.027\n",
-      "rent_index        122.6958     13.458      9.117      0.000      96.196     149.196\n",
-      "price_cut           6.3436      0.537     11.818      0.000       5.287       7.401\n",
+      "const             1.08e+05   1.82e+04      5.941      0.000    7.22e+04    1.44e+05\n",
+      "sales_inventory    -1.6987      0.213     -7.983      0.000      -2.118      -1.280\n",
+      "unemployment       -0.0675      0.022     -3.028      0.003      -0.111      -0.024\n",
+      "rent_index        141.2114     13.737     10.280      0.000     114.162     168.260\n",
+      "price_cut           5.6796      0.551     10.300      0.000       4.594       6.765\n",
       "==============================================================================\n",
-      "Omnibus:                       12.733   Durbin-Watson:                   0.255\n",
-      "Prob(Omnibus):                  0.002   Jarque-Bera (JB):               27.156\n",
-      "Skew:                           0.149   Prob(JB):                     1.27e-06\n",
-      "Kurtosis:                       4.534   Cond. No.                     8.77e+08\n",
+      "Omnibus:                       28.286   Durbin-Watson:                   0.217\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               66.395\n",
+      "Skew:                           0.498   Prob(JB):                     3.82e-15\n",
+      "Kurtosis:                       5.231   Cond. No.                     1.68e+06\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[2] The condition number is large, 8.77e+08. This might indicate that there are\n",
+      "[2] The condition number is large, 1.68e+06. This might indicate that there are\n",
       "strong multicollinearity or other numerical problems.\n"
      ]
     },
@@ -1552,7 +1551,7 @@
     }
    ],
    "source": [
-    "X = housing_data_cleaned.drop(columns=[\"med_house_price\",\"region_desc\",\"week\",\"civilian_labor_force\",\"employment\",\"unemployment_rate\",\"sales_count\"])\n",
+    "X = housing_data_cleaned.drop(columns=[\"med_house_price\",\"region_desc\",\"week\",\"civilian_labor_force\",\"region_id\",\"employment\",\"unemployment_rate\",\"sales_count\"])\n",
     "X = sm.add_constant(X) # adding a constant\n",
     "\n",
     "olsmod = sm.OLS(housing_data_cleaned['med_house_price'], X).fit()\n",
